
	* 0.9.1 Minor bugfixes:
		+ fixed an index bug.
		+ added translations for Italian, German, Portuguese and 
		Russian.
		
	* 0.9.2 Minor bugfixes:
		+ added Polish translation.
		+ added Bulgarian translation.
		+ fixed a Fonts dialog bug.
		+ fixed a SunOS/sparc bug where reading info from the
		#SYSTEM file crashed xCHM. Thanks go to the reporter of the
		bug Markus Schwarzenberg, for helping solve a bug on a
		platform I had no access to.

	* 0.9.3 Minor bugfixes:
		+ fixed 'MS-ITS:' link handling.
		+ corrected a contents tree bug.

	* 0.9.4 Minor bugfixes:
		+ fixed contents parsing problem.

	* 0.9.5 Major feature enhancements:
		+ added support for context sensitive help; code contributed
		by Eamon Millman from PCI Geomatics.

	* 0.9.6 Minor bugfixes:
		+ added Latvian translation.
		+ Eamon Millman fixed the way xCHM treated '&' characters in
		URLs.
		+ fixed a TOC bug.

	* 0.9.7 Minor bugfixes:
		+ added ListDirty() optimization hack from Iulian Dragos
		<dragosiulian@users.sourceforge.net>
		+ now the index list is being sorted.

	* 0.9.8 Minor feature enhancements:
		+ fixed the German translation.
		+ added 'Copy link location' to the right-click menu.
		
	* 1.0 Finally 'the release':
		+ now xCHM only compiles with wxWidgets 2.6.0.
		+ text selection and copy/paste operations are available.
		+ searching in page with Ctrl+F is possible.
		+ changed the protocol prefix to 'xchm:' to avoid conflicts
		with the wxWindows-integrated chm support.
		+ improved CHM load times and UI usability during loading.

	* 1.1 Feature enhancements:
		+ tw translation added.
		+ fixed (wxWidgets bug?) bookmarks save on exit bug.
		+ applied patch from Fritz Elfert for <SPAN> tag support and
		better icons for the contents tree control items.

	* 1.2 Feature enhancements:
		+ added Chinese translation.
		+ improved CHM language detection support.
		+ fixed Cyrillic character mapping in Unicode builds.
		 
	* 1.3:
		+ added Czech translation.