@@ -94,7 +94,20 @@ bool CHMHtmlWindow::LoadPage(const wxString& location)
 			_found = false;
 	}
 
-	return wxHtmlWindow::LoadPage(tmp);
+	bool ok = true;
+	wxString anchor = tmp.AfterLast('#');
+	if(anchor.Length() != 0 && anchor != tmp.AfterFirst('#')) {
+	      	wxString page = tmp.BeforeLast('#');
+		if(page != GetOpenedPage()) {
+			ok = wxHtmlWindow::LoadPage(tmp);  
+		}
+		if(ok) {
+			ok = ScrollToAnchor(anchor);
+		}
+	} else {
+	    	ok = wxHtmlWindow::LoadPage(tmp);
+	}
+	return ok;
 }
 
 
